--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,11 +1,5 @@
-body {
-  color: orange;
-}
-
-$mainBlue: #2f5572;
-
-.large-hero {
-  h2 {
-    color: $mainBlue;
-  }
-}
+@import "normalize.css";
+@import "base/_variables.css";
+@import "base/_global.css";
+@import "modules/_large-hero.css";
+@import "modules/_btn.css";
