--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #333;
 }
 
@@ -8,10 +8,10 @@ img {
   height: auto;
 }
 
-a {
-  color: $mainOrange;
-}
-
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: $mainOrange;
 }
