--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,8 +1,8 @@
 .btn {
-  background-color: #2f5572;
-  color: #fff;
+  background-color: $mainBlue;
+  color: #FFF;
   text-decoration: none;
-  padding: 0.75rem 1.2rem;
+  padding: .75rem 1.2rem;
   display: inline-block;
 
   &--orange {
@@ -16,4 +16,5 @@
       font-size: 1.25rem;
     }
   }
+
 }
