--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,6 +1,6 @@
 .headline {
-  font-weight: 300;
   font-size: 1.9rem;
+  font-weight: 300;
   color: $mainBlue;
 
   @mixin atSmall {
@@ -17,7 +17,6 @@
 
   &--small {
     font-size: 1.2rem;
-
     @mixin atSmall {
       font-size: 1.875rem;
     }
@@ -33,11 +32,15 @@
     font-weight: 100;
   }
 
-  &--margin-small {
-    margin-bottom: 0.5em;
+  strong {
+    font-weight: 400;
   }
 
-  &--margin-large {
+  &--b-margin-small {
+    margin-bottom: .5em;
+  }
+
+  &--b-margin-large {
     margin-bottom: 1.6em;
   }
 
