--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -20,29 +20,30 @@
     color: $mainBlue;
     margin: 0;
     font-size: 2.4rem;
-
+  
     @mixin atSmall {
       font-size: 4.8rem;
     }
+
   }
 
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
-    margin: 0;
-
     font-size: 1.5rem;
+    margin: 0;
 
     @mixin atSmall {
       font-size: 2.9rem;
     }
+
   }
 
   &__description {
-    color: #fff;
+    color: #FFF;
     font-size: 1.1rem;
     font-weight: 100;
-    text-shadow: 2px 2 px 0 rgba(0, 0, 0, 0.1);
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
@@ -51,4 +52,5 @@
       font-size: 1.875rem;
     }
   }
+
 }
