--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -11,18 +11,23 @@
     font-weight: 500;
   }
 
+  &--blue {
+    color: $mainBlue;
+  }
+
   &__icon {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: .6rem;
+    margin-bottom: 0.6rem;
 
     @mixin atSmall {
-      margin-right: .5rem;
+      position: relative;
+      top: 8px;
+      margin-right: 0.5rem;
       margin-left: 0;
       margin-bottom: 0;
       display: inline-block;
     }
   }
-
 }
